# dp-databricks-logging

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/dp_databricks_logging/: __init__.py  log_setup.py
